# ocamlearlybird

./: .editorconfig  .gitattributes  .gitignore  .ocp-indent  CHANGELOG.md  CHANGES.md  KNOWN_ISSUES.md  LICENSE  LICENSE.TXT  README.md  dune  dune-project  dune-workspace.dev  earlybird-411.opam  earlybird.opam  index.html
.github/workflows/: ci.yml
debug_adapter_protocol/: debug_protocol.ml  dune  rpc.ml
earlybird/: index.html
integrations/vscode/: debug.js  extension.js  main.js  ocaml-debugger-411.0.0.vsix  package-lock.json  package.json
ocaml_debug_adapter/: agent_disconnected.ml  agent_initialized.ml  agent_launched.ml  agent_launched_debug.ml  agent_launched_no_debug.ml  agent_null.ml  agent_uninitialized.ml  breakpoints.ml  debug_conn.ml  debug_protocol_ex.ml  dune  inspect.ml  lwt_util.ml  main.ml  session.ml  signatures.ml  symbols.ml  time_travel.ml
src/: breakpoints.ml  compare.ml  debug_agent.ml  debug_agent_types.ml  debug_conn.ml  debug_protocol_ex.ml  debug_session.ml  debug_state_debug.ml  debug_state_initialized.ml  debug_state_no_debug.ml  debug_state_uninitialized.ml  dune  inspect.ml  lifecycle.ml  log.ml  lwt_util.ml  main.ml  session.ml  state_debug.ml  state_initialized.ml  state_no_debug.ml  state_uninitialized.ml  symbols.ml  time_travel.ml
src/adapter/: adapter.ml  breakpoints.ml  debug_protocol_ex.ml  dune  inspect.ml  lifecycle.ml  state_debug.ml  state_initialized.ml  state_uninitialized.ml  time_travel.ml  util.ml
src/debug_agent/: debug_agent.ml  dune
src/debug_agent_411/: debug_agent_411.ml  debug_conn_411.ml  dune  symbols_411.ml
src/debugger/: breakpoints.ml  debugcom.ml  debugcom.mli  debugcom_basic.ml  debugger.ml  debugger.mli  debuginfo.ml  debuginfo.mli  dune  frame.ml  inspect.ml  inspect_types.ml  log.ml  module.ml  pc.ml  symbols.ml  symbols.mli  util.ml  value.ml  value.mli
src/debugger/core/: controller.ml  controller.mli  debug_types.ml  debug_types.mli  wire_protocol.ml  wire_protocol.mli
src/debugger/core/symbols/: bytecode.ml  code_fragment.ml  code_module.ml  source.ml  symbols.ml
src/debugger/debugcom/: debugcom.ml  debugcom_basic.ml  debugcom_types.ml  frame.ml  value.ml
src/debugger/hack/: ctype.ml  env.ml  envaux.ml
src/debugger/inspect/: ctype.ml  eval.ml  frame.ml  frame_scope_value.ml  inspect.ml  inspect_types.ml  local_value.ml  scene.ml  types.ml  value.ml  value_array.ml  value_basic.ml  value_func.ml  value_lazy.ml  value_list.ml  value_module.ml  value_object.ml  value_scope.ml  value_simple.ml  value_struct.ml
src/debugger/misc/: util.ml
src/debugger/symbols/: debuginfo.ml  debuginfo.mli  event.ml  module.ml  symbols.ml  symbols.mli
src/debugger/values/: array_values.ml  func_values.ml  lazy_values.ml  list_values.ml  misc_values.ml  module_values.ml  object_values.ml  record_values.ml  simple_values.ml  tuple_values.ml  unknown_values.ml  value.ml  value.mli  value_basic.ml  variant_values.ml
src/dune_int/: dune  dune_int.ml
src/global/: dune  global.ml
src/ground/: algorithms.ml  array.ml  compare.ml  dune  errors.ml  lexing.ml  list.ml  log.ml  lru_lwt.ml  lwt_conn.ml  lwt_conn.mli  lwt_io.ml  lwt_seq.ml  lwt_unix.ml  option.ml  ordered_type.ml  seq.ml  string.ml  unique_id.ml  unix.ml
src/hack/: ctype_hack.ml  dune  env_hack.ml  env_hack.mli  envaux_hack.ml
src/main/: dune  main.ml
src/ocaml_debug_agent/: Event.ml  array_util.ml  breakpoints.ml  debug_event.ml  debug_info.ml  debug_info.mli  debug_types.ml  debugcom.ml  debugcom.mli  debugcom_410.ml  debugcom_410.mli  debugcom_basic_410.ml  debugcom_basic_410.mli  dune  frame.ml  inspect.ml  inspect.mli  inspect_types.ml  log.ml  lwt_util.ml  module.ml  ocaml_debug_agent.ml  ocaml_debug_agent.mli  remote_debugger.ml  remote_debugger_410.ml  remote_debugger_410.mli  stack_frame.ml  symbols.ml  symbols.mli
src/path_glob/: ast.ml  ast.mli  dune  formula.ml  formula.mli  glob.ml  glob.mli  index.mld  lexer.mli  lexer.mll
src/trivia_check/: dune  trivia_check.ml  trivia_check.mli  trivia_lexer.mll  trivia_parser.mly
src/typenv/: ctype_hack.ml  ctype_hack.mli  dune  env_hack.ml  env_hack.mli  envaux_hack.ml  typenv.ml  typenv.mli  types.ml
src/typenv/411/: dune  env.ml  env.mli  persistent_env.ml  persistent_env.mli  typenv.ml
src/typenv/412/: README.md  dune  env.ml  env.mli  typenv.ml
src/typenv/414/: README.md  dune  env.ml  env.mli  persistent_env.ml  persistent_env.mli  typenv.ml
src/typenv/common/: dune  typenv.ml
src/util/: dune  lwt_util.ml  unique_id.ml
test/: dap_client.ml  dune  test_bad_magic.expected  test_bad_magic.ml  test_dune_source.expected  test_dune_source.ml  test_events.expected  test_events.ml  test_frames.expected  test_frames.ml  test_heap.expected  test_heap.ml  test_indexed.expected  test_indexed.ml  test_launch_race.expected  test_launch_race.ml  test_scopes.expected  test_scopes.ml  test_stepping.expected  test_stepping.ml  test_values.expected  test_values.ml  test_workspace.expected  test_workspace.ml
test/fixtures/: closure.ml  dune  hello.ml  make_wsroot_bc.sh  not_bytecode.txt  values.ml  wsroot.ml
