(lang dune 2.8)
(using menhir 2.1)

(name earlybird)

(generate_opam_files true)
(authors hackwaly@qq.com)
(maintainers hackwaly@qq.com)
(source (github hackwaly/ocamlearlybird))

(homepage https://github.com/hackwaly/ocamlearlybird)
(bug_reports https://github.com/hackwaly/ocamlearlybird/issues)

(package
  (name earlybird)
  (synopsis "Debug adapter for OCaml 4.11+")
  (depends
    (ocaml (and (>= 4.14.0) (< 5.0)))
    (ppx_deriving (>= 5.1))
    (ppx_deriving_yojson (>= 3.6.1))
    (menhir (and (>= 20201216) :build))
    (semver2 (and (>= 1.1.0) :build))
    (menhirLib (>= 20201216))
    (ocaml-compiler-libs (>= 0.12.3))
    (iter (>= 1.2.1))
    (lwt (>= 5.4.0))
    (lwt_ppx (>= 2.0.1))
    (lwt_react (>= 1.1.3))
    (cmdliner (>= 1.0.4))
    (logs (>= 0.7.0))
    (fmt (>= 0.8.9))
    (path_glob (>= 0.2))
    (sexplib (>= 0.14.0))
    (csexp (>= 1.3.2))
    (lru (>= 0.3.0))
    (dap (>= 1.0.6))))
