(lang dune 2.8)
(using menhir 2.1)

(name earlybird)

(generate_opam_files true)

(source (github hackwaly/ocamlearlybird))
(authors hackwaly@qq.com)
(maintainers "Simmo Saan <simmo.saan@gmail.com>")
(license MIT)

(package
 (name earlybird)
 (synopsis "Debug adapter for OCaml")
 (depends
  (ocaml (and (>= 4.12.0) (< 5.1)))
  (ppx_deriving (>= 5.1))
  (ppx_deriving_yojson (>= 3.6.1))
  (menhir (and (>= 20201216) :build))
  (menhirLib (>= 20201216))
  (ocaml-compiler-libs (>= 0.12.3))
  (ppx_optcomp (>= 0.11))
  (iter (>= 1.2.1))
  (lwt (>= 5.4.0))
  (lwt_ppx (>= 2.0.1))
  (lwt_react (>= 1.1.3))
  (cmdliner (>= 1.1.0))
  (logs (>= 0.7.0))
  (fmt (>= 0.8.9))
  (path_glob (>= 0.2))
  (sexplib (>= 0.14.0))
  (csexp (>= 1.3.2))
  (lru (>= 0.3.0))
  (dap (>= 1.0.6))))
