opam-version: "2.0"
name: "earlybird"
version: "0.1"
synopsis: "OCaml debug adapter"
description: """
OCaml debug adapter.
"""
maintainer: "文宇祥 <hackwaly@qq.com>"
authors: "文宇祥 <hackwaly@qq.com>"
license: "MIT"
homepage: "https://github.com/hackwaly/ocamlearlybird"
bug-reports: "https://github.com/hackwaly/ocamlearlybird/issues"
dev-repo: "git://github.com:hackwaly/ocamlearlybird.git"
depends: [
  "ocaml" {>= "4.06" & < "4.07"}
  "dune"
  "cmdliner"
  "batteries"
  "lwt"
  "lwt_ppx"
  "angstrom"
  "angstrom-lwt-unix"
  "yojson"
  "ppx_deriving_yojson"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
