opam-version: "2.0"
synopsis: "OCaml debug adapter"
description: """
OCaml debug adapter.
"""
maintainer: "文宇祥 <hackwaly@qq.com>"
authors: "文宇祥 <hackwaly@qq.com>"
license: "MIT"
homepage: "https://github.com/hackwaly/ocamlearlybird"
bug-reports: "https://github.com/hackwaly/ocamlearlybird/issues"
dev-repo: "git://git@github.com:hackwaly/ocamlearlybird.git"
doc: "https://hackwaly.github.io/ocamlearlybird/"
depends: [
  "ocaml" {>= "4.11.0" & < "4.12.0"}
  "dune" {>= "2.7"}
  "cmdliner"
  "lwt"
  "lwt_ppx"
  "lwt_react"
  "react"
  "logs"
  "fmt"
  "angstrom"
  "angstrom-lwt-unix"
  "yojson"
  "ppx_deriving_yojson"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
