(executable
 (name main)
 (flags (:standard -warn-error -a+31))
 (preprocess (pps lwt_ppx ppx_deriving_yojson ppx_deriving.make))
 (libraries
  cmdliner
  batteries
  lwt
  lwt.unix
  yojson
  ppx_deriving_yojson.runtime
  debug_adapter_protocol
  compiler-libs.bytecomp
  compiler-libs.common))

(install
 (section bin)
 (files (main.exe as ocamlearlybird)))
