(executable
 (name main)
 (modes byte)
	(modules main)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson ppx_deriving.show))
 (libraries main))

(library
 (name main)
 (modes byte)
 (wrapped false)
	(modules (:standard \ main))
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson ppx_deriving.show))
 (libraries cmdliner lwt lwt.unix logs logs.cli fmt fmt.cli fmt.tty logs.fmt
   dap.types dap.rpc_lwt astring compiler-libs.bytecomp compiler-libs.common
   ppx_deriving_yojson.runtime react lwt_react))
