(* -*- tuareg -*- *)

let impl_libs =
  Scanf.sscanf
    Sys.ocaml_version
    "%d.%2d.%s"
    (fun maj min _ ->
      match maj, min with
      | 4, 11 -> ["typenv_411"]
      | 4, (12 | 13) -> ["typenv_412"]
      | 4, 14 -> ["typenv_414"]
      | _ -> assert false)

let () = Jbuild_plugin.V1.send @@ {|
(executable
 (name main)
 (modes byte native)
 (preprocess
  (pps lwt_ppx))
 (libraries
  ground
  adapter
  logs
  logs.fmt
  logs.cli
  fmt
  fmt.tty
  fmt.cli
  lwt
  lwt.unix
  cmdliner
|} ^ String.concat "\n" impl_libs ^ {|))

(install
 (section bin)
 (files (main.exe as ocamlearlybird)))
|}
