; The debuggee used by the integration tests. It is compiled with ocamlc
; directly rather than with an (executable) stanza so that the debug information
; records this directory as a search dir, which is what lets the adapter resolve
; hello.ml back from the bytecode.

(rule
 (targets hello.bc)
 (deps hello.ml)
 (action
  (run %{bin:ocamlc} -g hello.ml -o hello.bc)))

(rule
 (targets values.bc)
 (deps values.ml)
 (action
  (run %{bin:ocamlc} -g values.ml -o values.bc)))

(rule
 (targets closure.bc)
 (deps closure.ml)
 (action
  (run %{bin:ocamlc} -g closure.ml -o closure.bc)))

; wsroot.bc mimics a dune >= 3.0 build: its debug info records the source search
; dir as "/workspace_root/test/fixtures" rather than a real path. See
; make_wsroot_bc.sh and test_dune_source.ml.

(rule
 (targets wsroot.bc)
 (deps wsroot.ml make_wsroot_bc.sh)
 (action
  (run sh make_wsroot_bc.sh %{bin:ocamlc} %{targets} wsroot.ml)))
